--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/passport": "^1.0.1",
 		"@types/passport-jwt": "^3.0.1",
 		"@types/supertest": "^2.0.8",
+		"@types/web-push": "^3.3.0",
 		"chai": "^4.2.0",
 		"mocha": "^6.2.0",
 		"nodemon": "^1.19.2",
@@ -52,6 +53,7 @@
 		"passport-jwt": "^4.0.0",
 		"path": "^0.12.7",
 		"pm2": "^3.5.1",
+		"web-push": "^3.4.1",
 		"webpack": "^4.39.3"
 	}
 }
