--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@types/mongoose": "^5.5.17",
 		"@types/morgan": "^1.7.37",
 		"@types/node": "^12.7.4",
+		"@types/nodemailer": "^6.4.0",
+		"@types/nodemailer-smtp-transport": "^2.7.4",
 		"@types/passport": "^1.0.1",
 		"@types/passport-jwt": "^3.0.1",
 		"@types/socket.io": "^2.1.4",
@@ -50,6 +52,8 @@
 		"moment-timezone": "^0.5.26",
 		"mongoose": "^5.6.13",
 		"morgan": "^1.9.1",
+		"nodemailer": "^6.4.2",
+		"nodemailer-smtp-transport": "^2.7.4",
 		"passport": "^0.4.0",
 		"passport-jwt": "^4.0.0",
 		"path": "^0.12.7",
