--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.1.0",
 		"express": "^4.17.1",
+		"google-auth-library": "^5.7.0",
 		"helmet": "^3.21.0",
 		"jwt-simple": "^0.5.6",
 		"moment": "^2.24.0",
@@ -53,7 +54,6 @@
 		"mongoose": "^5.6.13",
 		"morgan": "^1.9.1",
 		"nodemailer": "^6.4.2",
-		"nodemailer-smtp-transport": "^2.7.4",
 		"passport": "^0.4.0",
 		"passport-jwt": "^4.0.0",
 		"path": "^0.12.7",
