--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "npm run build && pm2 start ./pm2.json",
 		"stop": "pm2 delete ./pm2.json",
 		"build": "webpack --config webpack.config.js",
-		"serve": "nodemon ../nodemon.json"
+		"serve": "nodemon ../nodemon.json",
+		"deploy": "git pull && npm run build && npm run stop && npm run start && pm2 monit"
 	},
 	"author": "",
 	"license": "ISC",
