--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "./src/app.ts",
 	"scripts": {
 		"test": "mocha --timeout 10000 -r ts-node/register 'src/**/*.test.ts'",
-		"start": "npm run build && pm2 start ./pm2.json",
+		"heroku-prebuild": "npm install pm2 -g",
+		"start": "npm run build && pm2-runtime start pm2.json --env production",
 		"stop": "pm2 delete ./pm2.json",
 		"build": "webpack --config webpack.config.js",
 		"serve": "nodemon ../nodemon.json",
