--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"stop": "pm2 delete ./pm2.json",
 		"build": "webpack --config webpack.config.js",
 		"serve": "nodemon ../nodemon.json",
-		"deploy": "git pull && npm run build && pm2 delete ./pm2.json && pm2 start ./pm2.json && pm2 monit"
+		"deploy": "git pull && npm run build && pm2 start ./pm2.json && pm2 monit"
 	},
 	"author": "",
 	"license": "ISC",
